Updated page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Adept Kind Chimpanzee</title>
+    <title>LearnEon</title>
     <meta property="og:title" content="Adept Kind Chimpanzee" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
